--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ on:
   push:
     # Enable when testing release infrastructure on a branch.
     branches:
-     - jankatins/release-infra
+     - jankatins/master
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
 jobs:
