--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,8 @@ name: release
 on:
   push:
     # Enable when testing release infrastructure on a branch.
-    branches:
-     - jankatins/master
+#    branches:
+#     - jankatins/master
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
 jobs:
