--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,7 @@
 
 name: release
 on:
-  push:
-    # Enable when testing release infrastructure on a branch.
-#    branches:
-#     - jankatins/master
-    tags:
-      - "[0-9]+.[0-9]+.[0-9]+"
+  push
 jobs:
   create-release:
     name: create-release
