--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # Set to force version number, e.g., when no tag exists.
-      GA_VERSION: TEST-0.0.1
+      GA_VERSION: TEST-0.0.2
     outputs:
       upload_url: ${{ steps.release.outputs.upload_url }}
       GA_VERSION: ${{ env.GA_VERSION }}
@@ -135,6 +135,10 @@ jobs:
             rustembedded/cross:arm-unknown-linux-gnueabihf \
             arm-linux-gnueabihf-strip \
             /target/arm-unknown-linux-gnueabihf/release/rg
+
+      - name: list all files
+        shell: bash
+        run: find "${{ env.TARGET_DIR }}"
 
       - name: Build archive
         shell: bash
