--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # Set to force version number, e.g., when no tag exists.
-      GA_VERSION: TEST-0.0.2
+      GA_VERSION: TEST-0.0.3
     outputs:
       upload_url: ${{ steps.release.outputs.upload_url }}
       GA_VERSION: ${{ env.GA_VERSION }}
@@ -38,6 +38,7 @@ jobs:
           echo "GA_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
           echo "version is: ${{ env.GA_VERSION }}"
       - name: Create GitHub release
+        # Todo: Maybe replace it with https://github.com/softprops/action-gh-release to generate a nice changelog?
         id: release
         uses: actions/create-release@v1
         env:
@@ -143,14 +144,12 @@ jobs:
       - name: Build archive
         shell: bash
         run: |
-          outdir="$(ci/cargo-out-dir "${{ env.TARGET_DIR }}")"
+          outdir="${{ env.TARGET_DIR }}/release"
           staging="git-absorb-${{ needs.create-release.outputs.GA_VERSION }}-${{ matrix.target }}"
-          mkdir -p "$staging"/{complete,doc}
+          mkdir -p "$staging"/doc
 
           cp {README.md,LICENSE.md} "$staging/"
           cp Documentation/{git-absorb.1,git-absorb.txt} "$staging/doc/"
-          cp "$outdir"/{git-absorb.bash,git-absorb.fish,_git-absorb.ps1} "$staging/complete/"
-          cp complete/_git-absorb "$staging/complete/"
 
           if [ "${{ matrix.os }}" = "windows-2019" ]; then
             cp "target/${{ matrix.target }}/release/git-absorb.exe" "$staging/"
